--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 header {
   height: 100vh;
   padding: 5% 0% !important;
@@ -22,14 +21,17 @@ nav div a {
   color: black;
 }
 header h1 {
-  margin: 5% 0 0 5%;
+  margin: 5%;
   font-size: 120px;
+}
+header h1, section h1, .apply-now button {
   font-family: proxima-nova, sans-serif;
-  font-style: normal;
   font-weight: 700;
+  font-style: normal;
 }
 section {
   background-color: #f1f6f9;
+  padding: 4%;
 }
 
 .apply-now button{
@@ -38,15 +40,17 @@ section {
   border-radius: 5px;
   color: white;
   width: 100%;
-  padding: 10px 0;
-  margin: 5% 0 10% 0;
+  font-size: large;
+  padding: .7rem 0;
+  margin: 3% 0 5% 0;
 }
 section .review {
   display: flex;
   justify-content: space-between;
 }
-section {
-  padding: 4%;
+section h1 {
+  margin: 1rem 0 2rem 0;
+  color: black;
 }
 section img {
   width: 100%;
@@ -56,21 +60,32 @@ main {
   background-color: white;
 }
 ul li {
-  padding-bottom: 5px;
+  padding: .5rem 0;
+  font-size: large;
+}
+ul li:first-child {
+  padding-top: 0;
 }
 .review {
   padding-top: 5%;
   padding-bottom: 3%;
 }
+.review div:first-child {
+font-size: x-large;
+}
 .card-section button {
   color: white;
   background-color: #64d8d1;
   border: none;
-  border-radius: 30px;
-  padding: 5px 15px;
+  border-radius: 1.5rem;
+  padding: .25rem 1rem;
 }
 .details, li span, .stars span {
   color: #64d8d1;
+  cursor: pointer;
+}
+.details {
+  font-size: large;
 }
 .review sup, p sup {
   font-size: xx-small;
@@ -88,6 +103,12 @@ h1 sup {
   }
   section .stars {
     display: none;
+  }
+  header h1 {
+    font-size: 70px;
+  }
+  ul {
+    padding-top: 1rem;
   }
   
 }
